[package]
name = "cargypto_cli"
authors = ["Tarvi Tasane", "trvtsn"]
description = "Bulk Cryptocurrency Wallet Generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
crypto-addr = "0.2.3"
#monero-address-creator = { git = "https://github.com/tari-project/monero-address-creator", version = "0.1.0" }
monero-address-creator = { path = "./libraries/monero-address-creator" }
rand = "0.9.1"
secp256k1 = {version = "0.31.0", features = ["rand"]}
walletd = "0.2.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
debug = false
